# RAG

./: README.md  main.py  pyproject.toml  rag.ipynb  requirements.txt
app/: main.py
app/api/: ingest.py  qa.py
app/core/: config.py
app/prompts/: llm_prompt.txt  vlm_prompt.txt
app/services/: embedder.py  extractor.py  indexer.py  vision_summarizer.py
app/utils/: prompts.py
ui/: index.html  streamlit_app.py
